# RADcast

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements-linux-cpu.txt  requirements.txt
deploy/nginx/: radcast.conf
deploy/systemd/: radcast-dev.service  radcast.service
docs/: paired_restoration.md  radcast_optimized.md  windows_gpu_box.md
scripts/: bench_caption_backends.py  build_paired_restoration_dataset.py  discover_restoration_pairs.py  install-linux-cpu.sh  prepare_gpu_box_transfer.py  run_restoration_checkpoint_compare.py  run_sgmse_finetune_from_checkpoint.py  run_sgmse_train.py  score_restoration_report.py
src/radcast/: __init__.py  api.py  constants.py  enhance_cli.py  exceptions.py  manifests.py  models.py  progress.py  project.py  studio_cli.py  worker_client.py  (+2 more)
src/radcast.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: compute_mode_caption_fallback.test.js  glossary_review_modal.test.js  help_modal_behavior.test.js  review_flagged_items_modal.test.js  test_api_auth_bridge.py  test_api_ui.py  test_caption_artifacts.py  test_caption_backend_selection.py  test_caption_backends.py  test_caption_cue_shaping.py  test_caption_quality_policy.py  test_caption_review.py  test_glossary_review.py  test_glossary_store.py  test_human_caption_review.py  test_manifests.py  test_models.py  test_paired_restoration.py  test_progress.py  test_restoration_eval.py  test_speech_cleanup.py  test_studio.py  test_worker_client.py  test_worker_queue.py  test_worker_setup.py  transcript_view_modal.test.js
(+36 files in other folders)
